<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".VideoActivity">

    <VideoView
        android:id="@+id/videoPlayer_id"
        android:layout_width="match_parent"
        android:layout_height="671dp">

    </VideoView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/custom"
            android:text="@string/stop">

        </Button>

        <Button
            android:id="@+id/playBtn"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/custom"
            android:text="@string/play">

        </Button>

        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/custom"
            android:text="@string/pause">
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toScreen"
        android:layout_marginTop="100dp"
        android:textSize="25dp"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="@color/custom">

    </Button>

</LinearLayout>